fix z-index

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -192,6 +192,7 @@ html {
 
 .select-input__list {
     position: absolute;
+    z-index: 1;
     top: calc(100% - 8px);
     right: 0;
     left: 0;
