--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -577,6 +577,7 @@
 
 .header__cart-list {
     position: absolute;
+    z-index: 1;
     top: calc(100% + 11px);
     right: -32px;
     background-color: var(--white-color);
@@ -867,6 +868,7 @@
 
 .header__search-history {
     position: absolute;
+    z-index: 1;
     top: calc(100% + 4px);
     left: 0;
     width: calc(100% - 16px);
